# mini-llamacpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: activations.h  attention.h  embeddings.h  feedforward.h  generation.h  gguf_parser.h  layer_norm.h  model.h  model_loader.h  quantization.h  sampling.h  tensor.h  tokenizer.h  transformer_block.h
src/: activations.cpp  attention.cpp  embeddings.cpp  feedforward.cpp  generation.cpp  gguf_parser.cpp  layer_norm.cpp  model.cpp  model_loader.cpp  quantization.cpp  sampling.cpp  tensor.cpp  test_tensor.cpp  tokenizer.cpp  transformer_block.cpp
tests/: test_tensor.cpp
tests/doctest/: test_tensor.cpp
tests/gtest/: test_tensor.cpp
